fixed mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,8 @@ nav {
     flex: 1;
     margin-left: 8rem; }
     .professionalSummary .rightSummary .modal-title {
-      color: #eff2f9; }
+      color: #eff2f9;
+      font-size: 2rem; }
     .professionalSummary .rightSummary .modal-body {
       border-top: 1px solid #969393;
       border-bottom: 1px solid #969393;
@@ -293,12 +294,12 @@ nav {
         max-width: 330px;
         left: 5%; }
         section.professionalSummary .rightSummary .modal .modal-dialog .modal-content .modal-body {
-          padding: 0 1rem;
-          line-height: 1.5; }
-        section.professionalSummary .rightSummary .modal .modal-dialog .modal-content .modal-body .rightModal {
-          padding: 0 1rem; }
-          section.professionalSummary .rightSummary .modal .modal-dialog .modal-content .modal-body .rightModal li.statsItems {
-            font-size: 1.2rem; }
+          padding: 1.2rem 3rem;
+          line-height: 2; }
+          section.professionalSummary .rightSummary .modal .modal-dialog .modal-content .modal-body ul li.statsItems {
+            font-size: 5rem; }
+        section.professionalSummary .rightSummary .modal .modal-dialog .modal-content .modal-body .rightModal li.statsItems {
+          font-size: 1.2rem; }
       section.professionalSummary .rightSummary .information {
         display: grid;
         grid-template-columns: 30% 5% 63%;
@@ -320,10 +321,12 @@ nav {
     grid-template-columns: 1fr 1fr;
     justify-content: center; }
     .timeline .timeline_content .modal-title {
-      color: #eff2f9; }
+      color: #eff2f9;
+      font-size: 2rem; }
     .timeline .timeline_content .modal-body {
       border-top: 1px solid #969393;
-      border-bottom: 1px solid #969393; }
+      border-bottom: 1px solid #969393;
+      padding: 0 5rem; }
       .timeline .timeline_content .modal-body .statsItems {
         list-style: none;
         color: #eff2f9; }
@@ -457,10 +460,14 @@ nav {
       .timeline .timeline_content .modal {
         max-width: 330px;
         left: 5%; }
-        .timeline .timeline_content .modal .modal-dialog .modal-content .modal-body ul.list {
-          padding: 0 1rem; }
+        .timeline .timeline_content .modal .modal-header .modal-title {
+          font-size: 1.7rem;
+          padding-top: 0.5rem; }
+        .timeline .timeline_content .modal .modal-dialog .modal-content .modal-body {
+          padding: 1.2rem 3rem; }
           .timeline .timeline_content .modal .modal-dialog .modal-content .modal-body ul.list li {
-            font-size: 1rem; }
+            font-size: 1.4rem;
+            line-height: 1.6; }
       .timeline .timeline_content .timelines {
         display: flex;
         flex-direction: column-reverse; }
